<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/country_search_title"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintWidth_percent="0.8"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/search_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/country_search_input_hint"
        android:inputType="text"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_weight=".1"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/country_search_button_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"

        android:layout_marginBottom="1dp"
        android:backgroundTint="@color/button_submit"
        android:text="@string/country_search_search_button"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/country_search_button_clear"
        app:layout_constraintTop_toBottomOf="@+id/search_input"
        app:layout_constraintVertical_bias="0.001"
        app:layout_constraintWidth_percent="0.3" />

    <Button
        android:id="@+id/country_search_button_clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"

        android:backgroundTint="@color/button_clear"
        android:text="@string/country_search_clear_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/country_search_button_submit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_input"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/course_search_favourite_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_search_button_clear"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/course_search_favourite_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="90dp"
        android:backgroundTint="#E9C94D"
        android:text="Add to Favourites"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />


</androidx.constraintlayout.widget.ConstraintLayout>